--- a/LearnSphere/LearnSphere/View/PagePrincipal.xaml
+++ b/LearnSphere/LearnSphere/View/PagePrincipal.xaml
@@ -3,19 +3,16 @@
        xmlns:views="clr-namespace:LearnSphere.View"
        x:Class="LearnSphere.View.PagePrincipal">
 
-    <FlyoutItem Title="Menu" Icon="menu_icon.png">
-        <ShellContent Title="Home"
-                      Icon="home.png"
-                      Route="PageHome"
-                      ContentTemplate="{DataTemplate views:PageHome}" />
-        <ShellContent Title="Publicar"
-                      Icon="publicar.png"
-                      Route="PagePublicar"
-                      ContentTemplate="{DataTemplate views:PagePublicar}" />
-        <ShellContent Title="Perfil"
-                      Icon="perfil.png"
-                      Route="PagePerfil"
-                      ContentTemplate="{DataTemplate views:PagePerfil}" />
-    </FlyoutItem>
-    
+    <TabBar>
+        <Tab Title="Home" Icon="home.png">
+            <ShellContent Route="PageHome" ContentTemplate="{DataTemplate views:PageHome}" />
+        </Tab>
+        <Tab Title="Publicar" Icon="publicar.png">
+            <ShellContent Route="PagePublicar" ContentTemplate="{DataTemplate views:PagePublicar}" />
+        </Tab>
+        <Tab Title="Perfil" Icon="perfil.png">
+            <ShellContent Route="PagePerfil" ContentTemplate="{DataTemplate views:PagePerfil}" />
+        </Tab>
+    </TabBar>
+
 </Shell>
