--- a/LearnSphere/LearnSphere/View/PageCadastrar.xaml
+++ b/LearnSphere/LearnSphere/View/PageCadastrar.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="LearnSphere.View.PageCadastrar"
              BackgroundColor="#800080"
-             NavigationPage.HasNavigationBar="False">
+             NavigationPage.HasNavigationBar="False"
+             Title="Cadastro">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -12,29 +13,25 @@
         </Grid.RowDefinitions>
 
         <!-- Header with Logo and App Name -->
-        <StackLayout BackgroundColor="White" Padding="16" Spacing="8" Grid.Row="0">
-            <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Spacing="8">
-                <Image Source="Template" WidthRequest="40" HeightRequest="40"/>
-                <Label Text="LearnSphere" FontSize="24" VerticalOptions="Center" TextColor="#000000"/>
-            </StackLayout>
+        <StackLayout BackgroundColor="White" Padding="16" Spacing="8" Grid.Row="0" HorizontalOptions="FillAndExpand">
+            <Image Source="LearnSphere.png" HeightRequest="60" HorizontalOptions="Center"/>
         </StackLayout>
 
-        <!-- Register Form -->
+        <!-- Registration Form -->
         <ScrollView Grid.Row="1">
-            <StackLayout Padding="16" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" Spacing="20">
-                <Frame BackgroundColor="White" CornerRadius="16" Padding="16" WidthRequest="300">
-                    <StackLayout Spacing="20">
+            <StackLayout Padding="16" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">
+                <Frame BackgroundColor="White" CornerRadius="20" Padding="16" WidthRequest="300">
+                    <StackLayout Spacing="16">
                         <Label Text="Cadastre-se" FontSize="16" TextColor="#800080" HorizontalOptions="Center"/>
-                        <Entry x:Name="txtusuario" Placeholder="Usuário" Keyboard="Text" ReturnType="Next" ClearButtonVisibility="WhileEditing"/>
-                        <Entry x:Name="txtemail" Placeholder="E-mail" Keyboard="Email" ReturnType="Next" ClearButtonVisibility="WhileEditing"/>
-                        <Entry x:Name="txtcpf" Placeholder="CPF" Keyboard="Numeric" ReturnType="Next" ClearButtonVisibility="WhileEditing"/>
-                        <Entry x:Name="txtcelular" Placeholder="Celular" Keyboard="Telephone" ReturnType="Next" ClearButtonVisibility="WhileEditing"/>
-                        <StackLayout Orientation="Horizontal" VerticalOptions="Center">
-                            <Entry x:Name="txtsenha" Placeholder="Senha" Keyboard="Text" ReturnType="Next" IsPassword="True" ClearButtonVisibility="WhileEditing" HorizontalOptions="FillAndExpand"/>
-                            <ImageButton Source="eye_icon.png" BackgroundColor="Transparent" Clicked="OnTogglePasswordVisibility" WidthRequest="24" HeightRequest="24"/>
-                        </StackLayout>
-                        <Label Text="Sua senha precisa ter no mínimo 7 caracteres e deve conter letras e números." FontSize="12" TextColor="Gray"/>
-                        <Button x:Name="BtnCadastrar" Text="CADASTRAR" BackgroundColor="#800080" TextColor="White" CornerRadius="16" Clicked="BtnCadastrar_Clicked"/>
+                        <Entry x:Name="txtusuario" Placeholder="Usuário" Keyboard="Text" ReturnType="Next" ClearButtonVisibility="WhileEditing" />
+                        <Entry x:Name="txtemail" Placeholder="E-mail" Keyboard="Email" ReturnType="Next" ClearButtonVisibility="WhileEditing" />
+                        <Entry x:Name="txtcpf" Placeholder="CPF" Keyboard="Numeric" ReturnType="Next" ClearButtonVisibility="WhileEditing" />
+                        <Entry x:Name="txtcelular" Placeholder="Celular" Keyboard="Telephone" ReturnType="Next" ClearButtonVisibility="WhileEditing" />
+                        <Entry x:Name="txtsenha" Placeholder="Senha" Keyboard="Text" ReturnType="Next" IsPassword="True" ClearButtonVisibility="WhileEditing"/>
+                        <Label Text="Sua senha precisa ter no mínimo 7 caracteres e deve conter letras e números." 
+                               FontSize="12"
+                               Margin="0, 8, 0, 16" TextColor="Gray"/>
+                        <Button x:Name="BtnCadastrar" Text="CADASTRAR" BackgroundColor="#800080" TextColor="White" Clicked="BtnCadastrar_Clicked"/>
                         <Label Text="Já tem uma conta? Acesse aqui" TextColor="#800080" HorizontalOptions="Center">
                             <Label.GestureRecognizers>
                                 <TapGestureRecognizer Tapped="Login_Tapped"/>
