--- a/LearnSphere/LearnSphere/View/PageHome.xaml
+++ b/LearnSphere/LearnSphere/View/PageHome.xaml
@@ -6,31 +6,27 @@
              NavigationPage.HasNavigationBar="True">
 
     <ContentPage.ToolbarItems>
-        <ToolbarItem IconImageSource="vender.png"
+        <ToolbarItem IconImageSource="cart.png"
                      Text="Carrinho"
                      Order="Primary"
                      Priority="0"
                      Clicked="OnCartClicked"/>
     </ContentPage.ToolbarItems>
-
+    
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <StackLayout Grid.Row="0" Spacing="8" Padding="16">
-            <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand">
-                <ImageButton HeightRequest="40" WidthRequest="40" CornerRadius="20" BackgroundColor="Transparent" Source="pesquisar.png" Clicked="OnSearchButtonClicked"/>
-            </StackLayout>
-
-            <StackLayout HeightRequest="160" HorizontalOptions="FillAndExpand" BackgroundColor="Transparent">
-                <Grid>
-                    <Image Source="fluxo.png" Aspect="AspectFill" HorizontalOptions="FillAndExpand"/>
-                </Grid>
-            </StackLayout>
+        <StackLayout Orientation="Horizontal" Padding="8" HorizontalOptions="FillAndExpand">
+            <ImageButton Source="pesquisar.png" HeightRequest="40" WidthRequest="40" BackgroundColor="Transparent" Clicked="OnSearchButtonClicked" HorizontalOptions="Start" VerticalOptions="Center"/>
+            <Label Text="LearnSphere" TextColor="White" FontSize="24" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
+            <ImageButton Source="carrinho.png" HeightRequest="40" WidthRequest="40" BackgroundColor="Transparent" Clicked="OnCartClicked" HorizontalOptions="End" VerticalOptions="Center"/>
         </StackLayout>
+
+        <Image Source="fluxo.png" Aspect="AspectFill" Grid.Row="1" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
 
         <ScrollView Grid.Row="2">
             <ListView x:Name="cursosListView" Margin="16" ItemSelected="cursosListView_ItemSelected" RowHeight="100" SeparatorColor="Transparent" HasUnevenRows="true">
