--- a/LearnSphere/LearnSphere/View/PageCadastrar.xaml
+++ b/LearnSphere/LearnSphere/View/PageCadastrar.xaml
@@ -2,9 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="LearnSphere.View.PageCadastrar"
-             BackgroundColor="#800080"
-             NavigationPage.HasNavigationBar="False"
-             Title="Cadastro">
+             BackgroundColor="#7469B6"
+             NavigationPage.HasNavigationBar="False">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -12,25 +11,22 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <!-- Header with Logo and App Name -->
-        <StackLayout BackgroundColor="White" Padding="16" Spacing="8" Grid.Row="0" HorizontalOptions="FillAndExpand">
-            <Image Source="LearnSphere.png" HeightRequest="60" HorizontalOptions="Center"/>
+        <StackLayout BackgroundColor="White" Padding="20" Spacing="10" Grid.Row="0">
+            <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+                <Image Source="LearnSphere" WidthRequest="120" HeightRequest="120"/>
+            </StackLayout>
         </StackLayout>
 
-        <!-- Registration Form -->
         <ScrollView Grid.Row="1">
-            <StackLayout Padding="16" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">
-                <Frame BackgroundColor="White" CornerRadius="20" Padding="16" WidthRequest="300">
-                    <StackLayout Spacing="16">
+            <StackLayout Padding="20" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">
+                <Frame BackgroundColor="White" CornerRadius="20" Padding="20" WidthRequest="300">
+                    <StackLayout Spacing="20">
                         <Label Text="Cadastre-se" FontSize="16" TextColor="#800080" HorizontalOptions="Center"/>
                         <Entry x:Name="txtusuario" Placeholder="Usuário" Keyboard="Text" ReturnType="Next" ClearButtonVisibility="WhileEditing" />
                         <Entry x:Name="txtemail" Placeholder="E-mail" Keyboard="Email" ReturnType="Next" ClearButtonVisibility="WhileEditing" />
                         <Entry x:Name="txtcpf" Placeholder="CPF" Keyboard="Numeric" ReturnType="Next" ClearButtonVisibility="WhileEditing" />
                         <Entry x:Name="txtcelular" Placeholder="Celular" Keyboard="Telephone" ReturnType="Next" ClearButtonVisibility="WhileEditing" />
                         <Entry x:Name="txtsenha" Placeholder="Senha" Keyboard="Text" ReturnType="Next" IsPassword="True" ClearButtonVisibility="WhileEditing"/>
-                        <Label Text="Sua senha precisa ter no mínimo 7 caracteres e deve conter letras e números." 
-                               FontSize="12"
-                               Margin="0, 8, 0, 16" TextColor="Gray"/>
                         <Button x:Name="BtnCadastrar" Text="CADASTRAR" BackgroundColor="#800080" TextColor="White" Clicked="BtnCadastrar_Clicked"/>
                         <Label Text="Já tem uma conta? Acesse aqui" TextColor="#800080" HorizontalOptions="Center">
                             <Label.GestureRecognizers>
