--- a/LearnSphere/LearnSphere/View/PagePrincipal.xaml
+++ b/LearnSphere/LearnSphere/View/PagePrincipal.xaml
@@ -1,9 +1,9 @@
-﻿<Shell xmlns="http://xamarin.com/schemas/2014/forms"
+﻿<?xml version="1.0" encoding="UTF-8"?>
+<Shell xmlns="http://xamarin.com/schemas/2014/forms"
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
        xmlns:views="clr-namespace:LearnSphere.View"
        x:Class="LearnSphere.View.PagePrincipal"
-       Shell.NavBarIsVisible="False"
-       BackgroundColor="#EEEBEF"
+       BackgroundColor="#7469B6"
        Title="LearnSphere">
 
     <TabBar>
