--- a/LearnSphere/LearnSphere/View/EditPerfilPage.xaml
+++ b/LearnSphere/LearnSphere/View/EditPerfilPage.xaml
@@ -3,24 +3,26 @@
              x:Class="LearnSphere.View.EditPerfilPage"
              Title="Editar Perfil">
     <ContentPage.Content>
-        <StackLayout Padding="20">
-            <Label Text="Perfil do Usuário" FontAttributes="Bold" FontSize="20" HorizontalOptions="Center" Margin="0,10,0,20" />
-            <Label Text="Nome de usuário:" />
-            <Entry x:Name="entryUsuario" />
-            <Label Text="E-mail:" />
-            <Entry x:Name="entryEmail" />
-            <Label Text="CPF:" />
-            <Entry x:Name="entryCPF" />
-            <Label Text="Telefone:" />
-            <Entry x:Name="entryTelefone" />
-            <Label Text="Senha:" />
-            <Entry x:Name="entrySenha" IsPassword="True" />
-            <StackLayout Orientation="Horizontal" Margin="0,20">
-                <Label Text="Se tornar Fornecedor?" VerticalOptions="Center" />
-                <Switch x:Name="FornecedorSwitch" HorizontalOptions="StartAndExpand" />
+        <ScrollView>
+            <StackLayout Padding="20">
+                <Label Text="Perfil do Usuário" FontAttributes="Bold" FontSize="20" HorizontalOptions="Center" Margin="0,10,0,20" />
+                <Label Text="Nome de usuário:" />
+                <Entry x:Name="entryUsuario" />
+                <Label Text="E-mail:" />
+                <Entry x:Name="entryEmail" />
+                <Label Text="CPF:" />
+                <Entry x:Name="entryCPF" />
+                <Label Text="Telefone:" />
+                <Entry x:Name="entryTelefone" />
+                <Label Text="Senha:" />
+                <Entry x:Name="entrySenha" IsPassword="True" />
+                <StackLayout Orientation="Horizontal" Margin="0,20">
+                    <Label Text="Se tornar Fornecedor?" VerticalOptions="Center" />
+                    <Switch x:Name="FornecedorSwitch" HorizontalOptions="StartAndExpand" />
+                </StackLayout>
+                <Button Text="Salvar" Clicked="Salvar_Clicked" HorizontalOptions="Center" Margin="0,40,0,0" />
+                <Button Text="Desconectar" Clicked="Desconectar_Clicked" HorizontalOptions="Center" Margin="0,10,0,0" />
             </StackLayout>
-            <Button Text="Salvar" Clicked="Salvar_Clicked" HorizontalOptions="Center" Margin="0,40,0,0" />
-            <Button Text="Desconectar" Clicked="Desconectar_Clicked" HorizontalOptions="Center" Margin="0,10,0,0" />
-        </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
