--- a/LearnSphere/LearnSphere/View/PagePerfil.xaml
+++ b/LearnSphere/LearnSphere/View/PagePerfil.xaml
@@ -1,57 +1,44 @@
 ﻿<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:converters="clr-namespace:LearnSphere.Converters"
-             x:Class="LearnSphere.View.PagePerfil"
-             BackgroundColor="{StaticResource LightGrayColor}">
-    <ContentPage.Resources>
-        <ResourceDictionary>
-            <converters:ByteArrayToImageSourceConverter x:Key="ByteArrayToImageSourceConverter" />
-        </ResourceDictionary>
-    </ContentPage.Resources>
+             x:Class="LearnSphere.View.PagePerfil" BackgroundColor="White">
     <ScrollView>
-        <Grid Padding="20">
+        <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <StackLayout Grid.Row="0" BackgroundColor="{StaticResource LightGrayColor}" Padding="20" Spacing="10">
-                <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
-                    <ImageButton x:Name="Perfil" HeightRequest="80" WidthRequest="80" BackgroundColor="{StaticResource LightGrayColor}" CornerRadius="40" Source="perfil.png" Padding="10" Clicked="Perfil_Clicked"/>
+            <StackLayout Grid.Row="0" BackgroundColor="#F8F8FF" Padding="20" Spacing="20">
+                <StackLayout Orientation="Horizontal">
+                    <ImageButton x:Name="Perfil"  HeightRequest="50" WidthRequest="50" BackgroundColor="#F8F8FF" CornerRadius="50" Source="perfil.png" Padding="10" HorizontalOptions="StartAndExpand" Clicked="Perfil_Clicked"/>
+                    <ImageButton HeightRequest="50" WidthRequest="50" BackgroundColor="#F8F8FF" CornerRadius="50" Source="information.png" Padding="10"/>
+                    <ImageButton HeightRequest="50" WidthRequest="50" BackgroundColor="#F8F8FF" CornerRadius="50" Source="email.png" Padding="10"/>
                 </StackLayout>
-                <Label x:Name="lblNomeUsuario" Text="Olá, " FontAttributes="Bold" FontSize="24" TextColor="{StaticResource PrimaryColor}" HorizontalOptions="Center"/>
+
+                <Label x:Name="lblNomeUsuario" Text="Olá, " FontAttributes="Bold" FontSize="20" TextColor="Black" HorizontalOptions="StartAndExpand"/>
+
+                <StackLayout Grid.Row="1" Padding="20" Spacing="20">
+
+                    <ScrollView Orientation="Horizontal">
+                        <StackLayout Orientation="Horizontal" HorizontalOptions="StartAndExpand">
+                            <StackLayout>
+                                <ImageButton HorizontalOptions="CenterAndExpand" Source="cursos.png" CornerRadius="50" BackgroundColor="#f0f1f5" Padding="10" HeightRequest="50" WidthRequest="50" Clicked="ImageButton_Clicked"/>
+                                <Label Text="Cursos" FontSize="12" FontAttributes="Bold" TextColor="Black" HorizontalOptions="Center"/>
+                            </StackLayout>
+                        </StackLayout>
+                    </ScrollView>
+                </StackLayout>
             </StackLayout>
 
             <StackLayout Grid.Row="1" Padding="20" Spacing="20">
-                <Frame BackgroundColor="{StaticResource WhiteColor}" CornerRadius="15" Padding="20">
-                    <StackLayout>
-                        <Label x:Name="lblMensagemCursos" TextColor="{StaticResource PrimaryColor}" FontAttributes="Bold" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontSize="18"/>
-                        <ListView x:Name="listViewCursos" IsVisible="False">
-                            <ListView.ItemTemplate>
-                                <DataTemplate>
-                                    <ViewCell>
-                                        <StackLayout Orientation="Horizontal" Padding="10">
-                                            <Image Source="{Binding foto, Converter={StaticResource ByteArrayToImageSourceConverter}}" HeightRequest="50" WidthRequest="50"/>
-                                            <StackLayout Padding="10">
-                                                <Label Text="{Binding titulo}" FontAttributes="Bold" TextColor="{StaticResource PrimaryColor}"/>
-                                                <Label Text="{Binding subtitulo}" TextColor="{StaticResource SecondaryColor}"/>
-                                            </StackLayout>
-                                        </StackLayout>
-                                    </ViewCell>
-                                </DataTemplate>
-                            </ListView.ItemTemplate>
-                        </ListView>
-                    </StackLayout>
+                <Frame HeightRequest="120" CornerRadius="15">
+                    <Label Text="" TextColor="Black" FontAttributes="Bold" HorizontalOptions="Start" HorizontalTextAlignment="Start" WidthRequest="200" FontSize="24"/>
                 </Frame>
 
-                <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" Spacing="20">
+                <StackLayout Orientation="Horizontal" HorizontalOptions="StartAndExpand">
                     <StackLayout>
-                        <ImageButton x:Name="Carrinho" Source="vender.png" CornerRadius="25" BackgroundColor="{StaticResource LightGrayColor}" Padding="10" HeightRequest="50" WidthRequest="50" Clicked="Carrinho_Clicked"/>
-                        <Label Text="Vendas" FontSize="12" FontAttributes="Bold" TextColor="{StaticResource PrimaryColor}" HorizontalOptions="Center"/>
-                    </StackLayout>
-                    <StackLayout>
-                        <ImageButton Source="cursos.png" CornerRadius="25" BackgroundColor="{StaticResource LightGrayColor}" Padding="10" HeightRequest="50" WidthRequest="50" Clicked="ImageButton_Clicked"/>
-                        <Label Text="Cursos" FontSize="12" FontAttributes="Bold" TextColor="{StaticResource PrimaryColor}" HorizontalOptions="Center"/>
+                        <ImageButton x:Name="Carrinho" HorizontalOptions="CenterAndExpand" Source="vender.png" CornerRadius="50" BackgroundColor="#f0f1f5" Padding="10" HeightRequest="50" WidthRequest="50" Clicked="Carrinho_Clicked" />
+                        <Label Text="Vendas" FontSize="12" FontAttributes="Bold" TextColor="Black" HorizontalOptions="Center"/>
                     </StackLayout>
                 </StackLayout>
             </StackLayout>
